check the pipeline

--- a/applications/mean-k8s/app-code/public/index.html
+++ b/applications/mean-k8s/app-code/public/index.html
@@ -3,7 +3,7 @@
 <html class="no-js" ng-app="meanMapApp">
 <head>
     <meta charset="utf-8">
-    <title>Scotch MEAN Map</title>
+    <title>Hugo MEAN app example</title>
     <meta name="description" content="An example demonstrating Google Map integration with MEAN Apps">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
